big additions to chap3

--- a/chap2.tex
+++ b/chap2.tex
@@ -961,6 +961,11 @@ laws---and enact an ethics impervious to scrutiny.\footnote{Digital
 %% ---drawing from PARC/CAST documents
 \subsection{Safety and Statistical Risk}
 
+%%ALSO: consider the risk comments in Cox \& Murray, Mar2 notes;
+%%trying to decide how many 9s to have; and what counts as evidence?
+%%is it just statistics, testing of components? or can we judge based
+%%on designs??
+
 The primary driving force in the current self-driving car
 narrative is safety; specifically, the poor safety record of human
 drivers and the potential for machines to do much better, free from
@@ -1281,7 +1286,14 @@ Thinking about the variety in types, uses, and users of road vehicles---from
 subcompacts to vans to pickup trucks; from solo commuting to carrying kids to
 hauling construction equipment or moving furniture; from the wealthy
 to the poor, the urban to the rural---makes clear that cars are
-multipurpose vehicles, with culturally-specific uses. When the
+multipurpose vehicles, with culturally-specific uses. 
+
+%%Perhaps add in a quick aside about a map-only interface that
+%%requires a destination for operation: this assumes your driving has
+%%a clear and defined destination that you know; cruising around may
+%%be possible but is not the intended mode of operation
+
+When the
 expected user is the commuting, upper-middle-class, working father or
 the privileged college boy (and the opposers of the technology are
 branded by some, as we saw, as ``soccer moms''), we risk developing
