--- a/concl.tex
+++ b/concl.tex
@@ -7,6 +7,17 @@
 
 Impacts / New Epistemologies (21 p)
 
+Somewhere in here:
+bring in the qualitative observations of actually driving, the
+components we interact with on a daily basis
+Our cars are already complex human/machine systems, and it is time our
+viewpoint shifts to begin to recognize this fact; this is not a move
+from total human operation to total machine operation, and therefore
+from total human agency to total machine agency, but a change in the
+blend of capacities and the technologies involved in getting there.
+
+
+
 >>>This is where I weave in automotive history 
 >>>Return to streetcar and the re-shaping of public space: 
 
