--- a/concl.tex
+++ b/concl.tex
@@ -119,7 +119,7 @@ EDIT THE BELOW
 grapple with instead of accepting teleology/common media framings: (1
 p)
 --1) what is the appropriate role for the human in the human/machine
-system? (1 p)
+system? (1 p) (and what skills do they need to acquire)
 --2) what is the appropriate role of statistics and risk in governing
 policy on the issue? can you opt-out? (0.5 p)
 --3) how safe is safe enough? for whom? and how is this regulated? (1
